--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,27 +1,41 @@
-.price_by_night {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    background-color: #FF5A5F;
-    color: white;
+.places {
+    margin-top: 20px;
+}
+
+.places h1 {
+    font-size: 30px;
+    text-align: left;
+}
+
+article {
+    width: 390px;
+    padding: 20px;
+    margin: 20px;
+    border: 1px solid #FF5A5F;
     border-radius: 4px;
-    padding: 10px;
+}
+
+article h2 {
+    font-size: 30px;
+    text-align: center;
+}
+.price_by_night {
+    color: #FF5A5F;
+    border: 4px solid #FF5A5F;
+    border-radius: 48%;
     min-width: 60px;
     height: 60px;
     font-size: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    padding: 10px 15px;
+    float: right;
 }
 
-/* Information section */
 .information {
     height: 80px;
     display: flex;
     justify-content: space-between;
     border-top: 1px solid #DDDDDD;
     border-bottom: 1px solid #DDDDDD;
-    margin: 10px 0;
     padding: 10px 0;
 }
 
@@ -30,18 +44,22 @@
     text-align: center;
 }
 
-/* User section */
 .user {
-    margin-top: 10px;
-    font-size: 16px;
+    padding: 10px 0;
 }
 
 .user strong {
     font-weight: bold;
 }
 
-/* Description section */
 .description {
-    margin-top: 10px;
-    font-size: 14px;
+    padding: 10px 0;
+}
+.price {
+    background-color: #FF5A5F;
+    color: white;
+    border-radius: 50%;
+    padding: 10px 15px;
+    font-weight: bold;
+    float: right;
 }
