--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -2,9 +2,8 @@ footer {
     background: green;
     height: 60px;
     width: 100%;
-    position: fixed;
+    position: absolute;
     bottom: 0;
-    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
