--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,9 +1,11 @@
 
+body {
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
 .container {
     max-width: 1000px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: 30px auto;
 }
