--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,7 +1,27 @@
-.locations {
+.filters {
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+    align-items: center;
+    padding-right: 30px;
+}
+
+button {
+    background-color: #FF5A5F;
+    color: white;
+    height: 48px;
+    width: 20%;
+    border: none;
+    border-radius: 4px;
+    font-size: 18px;
+}
+
+button:hover {
+    opacity: 0.9;
 }
 
 .locations, .amenities {
