--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,20 +1,18 @@
-section.places {
-    padding: 20px;
+.places {
+    margin-top: 20px;
 }
 
 .places h1 {
     font-size: 30px;
     text-align: left;
-    margin-bottom: 20px;
 }
 
-article.place {
+article {
     width: 390px;
     margin: 20px;
     padding: 20px;
     border: 1px solid #FF5A5F;
     border-radius: 4px;
-    position: relative;
 }
 
 article.place h2 {
